--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/imambasoka">View on GitHub</a>
 
-          <h1 id="project_title">Imambasoka.GitHub.io</h1>
+          <h1 id="project_title">imambasoka</h1>
           <h2 id="project_tagline">test</h2>
 
         </header>
